...
  bool locationExists = false;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Add Location'),
        centerTitle: true,
      ),
      body: Form(
        key: _formKey,
        child: Container(
            margin: const EdgeInsets.all(15),
...
                    borderSide:
                        const BorderSide(color: Colors.blue, width: 5.0),
                  ),
                ),
              ),
              ElevatedButton(
                  key: const Key('AddScreenAddButton'),
                  style: ButtonStyle(
                      textStyle: MaterialStateProperty.all(
                          const TextStyle(fontSize: 20)),
                      shape: MaterialStateProperty.all<RoundedRectangleBorder>(
                          RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(15.0)))),
...
