...
            child: Container(
              padding: const EdgeInsets.all(20),
              child: ForecastWidget(forecast: data.forecast),
            ),
          ),
          ElevatedButton(
            key: const Key('DeleteButton'),
            onPressed: () {
              databaseController.deleteLocation(data.location.id);
              const snackBar = SnackBar(
                content: Text('Location deleted'),
              );

...
