...

class AppBarTitle extends StatelessWidget {
  const AppBarTitle({super.key});

  @override
  Widget build(BuildContext context) {
    return const Text('Die Wetter App');
  }
}

typedef ResetTextStateCallback = Function();

class AppBarTextField extends ConsumerWidget {
...
